--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -31,7 +31,13 @@ jobs:
         chmod 0600 $HOME/.gem/credentials
         printf -- "---\n:github: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
         gem build *.gemspec
-        gem push --KEY github --host https://rubygems.pkg.github.com/${OWNER} *.gem
+        VERSION=$(gem spec *.gem version | grep version | awk '{print $2}')
+        EXISTS=$(gem search ^breacan$ -a | grep -c $VERSION)
+        if [ $EXISTS -eq 0 ]; then
+          gem push --KEY github --host https://rubygems.pkg.github.com/${OWNER} *.gem
+        else
+          echo "Gem with the same version already exists. Skipping push..."
+        fi
       env:
         GEM_HOST_API_KEY: "Bearer ${{secrets.GITHUB_TOKEN}}"
         OWNER: ${{ github.repository_owner }}
