--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -25,6 +25,7 @@ jobs:
         ruby-version: 3
 
     - name: Publish to GPR
+      id: gpr
       run: |
         mkdir -p $HOME/.gem
         touch $HOME/.gem/credentials
@@ -37,12 +38,14 @@ jobs:
           gem push --KEY github --host https://rubygems.pkg.github.com/${OWNER} *.gem
         else
           echo "Gem with the same version already exists. Skipping push..."
+          echo "skip_publish_to_rubygems::true" >> $GITHUB_OUTPUT
         fi
       env:
         GEM_HOST_API_KEY: "Bearer ${{secrets.GITHUB_TOKEN}}"
         OWNER: ${{ github.repository_owner }}
 
     - name: Publish to RubyGems
+      if: ${{ steps.gpr.outputs.skip_publish_to_rubygems != 'true' }}
       run: |
         mkdir -p $HOME/.gem
         touch $HOME/.gem/credentials
